Fix protocol text on mobile-phone

--- a/src/composites/HealthProtocols/styles.css
+++ b/src/composites/HealthProtocols/styles.css
@@ -56,12 +56,12 @@
 
   .protocol-container {
     margin-top: 48px;
-    padding: 42px;
+    padding: 24px;
   }
 
   .grid-container {
     grid-template-columns: repeat(2, 1fr);
-    grid-column-gap: 40px;
+    grid-column-gap: 10px;
     grid-row-gap: 20px;
   }
   .prot-item img {
